--- a/index.html
+++ b/index.html
@@ -322,6 +322,78 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.1 Canary 5 -->
+                            <tr>
+                                <td rowspan="5">3.1 Canary 5</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.4/android-studio-ide-171.4474551-windows.zip">android-studio-ide-171.4474551-windows.zip</a>
+                                </td>
+                                <td>801440548 bytes</td>
+                                <td>874233f2cb88f32901584914da8f63fc62fdf94b1e0fe37cd09622b96e664833</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1flfltqo9vsj31kw0qsqal.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.4/android-studio-ide-171.4474551-windows32.zip">android-studio-ide-171.4474551-windows32.zip</a>
+                                </td>
+                                <td>800911771 bytes</td>
+                                <td>f9e6499d141cf7d830d7c8081611b54e90ed90c2d1190a792b640ff1f8ea7405</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.4/android-studio-ide-171.4474551-mac.zip">android-studio-ide-171.4474551-mac.dmg</a>
+                                </td>
+                                <td>800931688 bytes</td>
+                                <td>fe1e8ae2dd8e391971cc336fdd262f31313fd0125e894f00d2ae959d4aa196eb</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.4/android-studio-ide-171.4474551-linux.zip">android-studio-ide-171.4474551-linux.zip</a>
+                                </td>
+                                <td>799906015 bytes</td>
+                                <td>4028ee5e2718637c370328234f6b9837fbc14ec57d90b1a40498a87ccc0dff65</td>
+                            </tr>
+                            <!-- 3.0.1 正式版 -->
+                            <tr>
+                                <td rowspan="5">3.0.1 正式版</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.0.1.0/android-studio-ide-171.4443003-windows.exe">android-studio-bundle-171.4443003-windows.exe</a>
+                                </td>
+                                <td>683 MB</td>
+                                <td>1f71333fc8f31281b643a12d7f9d4c22e75ee7c14dc1faf00ce3d5291ef40bb0</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1flru402ybpj31kw0u6n7j.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.1.0/android-studio-ide-171.4443003-windows32.zip">android-studio-ide-171.4443003-windows32.zip</a>
+                                </td>
+                                <td>738 MB</td>
+                                <td>cd644af01126a9d8cf372ada1f520579d443946e5cfa99e42234d539db59f842</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.0.1.0/android-studio-ide-171.4443003-mac.dmg">android-studio-ide-171.4443003-mac.dmg</a>
+                                </td>
+                                <td>738 MB</td>
+                                <td>c4e0e3da447f4517128ee1a767ed130721fd2c0e0a1b311ce7dbc05766dcd221</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.1.0/android-studio-ide-171.4443003-linux.zip">android-studio-ide-171.4443003-linux.zip</a>
+                                </td>
+                                <td>737 MB</td>
+                                <td>ad7110ed2ffc662b7a13efa5064390c8e8e74815d8c688351bd8829331852acf</td>
+                            </tr>
                             <!-- 3.1 Canary 4 -->
                             <tr>
                                 <td rowspan="5">3.1 Canary 4</td>
@@ -461,43 +533,6 @@
                                 </td>
                                 <td>813165347 bytes</td>
                                 <td>f2f5959168753a206342cb5b3da205c43c60a031df49dc92f6fd8b57cde6af23</td>
-                            </tr>
-                            <!-- 3.0.1 正式版 -->
-                            <tr>
-                                <td rowspan="5">3.0.1 正式版</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/install/3.0.1.0/android-studio-ide-171.4443003-windows.exe">android-studio-bundle-171.4443003-windows.exe</a>
-                                </td>
-                                <td>683 MB</td>
-                                <td>1f71333fc8f31281b643a12d7f9d4c22e75ee7c14dc1faf00ce3d5291ef40bb0</td>
-                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1flru402ybpj31kw0u6n7j.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.1.0/android-studio-ide-171.4443003-windows32.zip">android-studio-ide-171.4443003-windows32.zip</a>
-                                </td>
-                                <td>738 MB</td>
-                                <td>cd644af01126a9d8cf372ada1f520579d443946e5cfa99e42234d539db59f842</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <nobr>Mac OS X</nobr>
-                                </td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/install/3.0.1.0/android-studio-ide-171.4443003-mac.dmg">android-studio-ide-171.4443003-mac.dmg</a>
-                                </td>
-                                <td>738 MB</td>
-                                <td>c4e0e3da447f4517128ee1a767ed130721fd2c0e0a1b311ce7dbc05766dcd221</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.1.0/android-studio-ide-171.4443003-linux.zip">android-studio-ide-171.4443003-linux.zip</a>
-                                </td>
-                                <td>737 MB</td>
-                                <td>ad7110ed2ffc662b7a13efa5064390c8e8e74815d8c688351bd8829331852acf</td>
                             </tr>
                             <!-- 3.0 正式版 -->
                             <tr>
