--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
     </header>
     <div id="auto-scroll-ad-box" style="z-index: 10; right: 0px; position: absolute; top: 1012px;">
         <div class="ad-float-right">
+            <a href="https://mp.weixin.qq.com/s/79meIJKrbPysafJufBnSXg" title="TensorFlow 官方微信公众号" onclick="trackOutboundLink('https://mp.weixin.qq.com/s/79meIJKrbPysafJufBnSXg', 'AD-TensorFlow-Wechat-QRCode', 'click');" target="_blank">
+                <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fml2ip3fa1j303m03mgll.jpg">
+            </a>
+        </div>
+        <div class="ad-float-right">
             <a href="#" title="支付宝扫码领红包，天天可领，想花就花" onclick="trackOutboundLink('Alipayhongbao.com', 'AD-AliPay-HB', 'click');" target="_blank">
                 <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fls1eov2jej303m0480ta.jpg">
             </a>
