Add Bitcoin donate QRCode info

--- a/donate.html
+++ b/donate.html
@@ -179,12 +179,16 @@
                     </blockquote>
                 </div>
                 <div class="donate-method-qr">
-                     <h4 class="donate-method-title" align="center" style="padding: 0;">支付宝</h4>
+                     <h4 class="donate-method-title">支付宝</h4>
                      <img class="donate-method-qr-img" src="./static/image/alipay_qr_code.png" />
                  </div>
                  <div class="donate-method-qr">
-                     <h4 id="wechat" class="donate-method-title" align="center" style="padding: 0;">微信</h4>
+                     <h4 id="wechat" class="donate-method-title">微信</h4>
                      <img class="donate-method-qr-img" src="./static/image/weichat_pay_qr_code.png" />
+                 </div>
+                 <div class="donate-method-qr">
+                     <h4 id="wechat" class="donate-method-title">比特币</h4>
+                     <img class="donate-method-qr-img" src="./static/image/bitcoin_pay_qr_code.png" />
                  </div>
             </div>
             <!-- 捐赠列表 -->
