--- a/index.html
+++ b/index.html
@@ -5255,6 +5255,26 @@
                     style: {
                         isRound: true
                     }
+                },
+                {
+                    title: "Android应用安全防护和逆向分析",
+                    url: "https://amazon.cn/gp/product/B0788XV9WC/ref=as_li_tl?ie=UTF8&camp=536&creative=3200&creativeASIN=B0788XV9WC&linkCode=as2&tag=androiddevtools-bottom-book-",
+                    description: "本书全面介绍Android应用的安全防护方法与逆向分析技术，分为四篇：基础篇、防护篇、工具篇、操作篇，共26章。基础篇包括第1~7章，主要介绍移动应用安全的基础知识，包括Android中NDK开发知识、逆向中需要用到的命令、编译之后的apk包含的四类主要文件格式解析等。防护篇包括第8~14章，主要介绍移动应用安全防护的相关技术，包括混淆、签名校验、反调试检测等安全策略，Android应用升级权限、降低权限等，配置文件中的问题，应用签名机制，apk的加固策略，so文件的加固策略等。工具篇包括第15~19章，主要介绍逆向分析常用的工具以及使用场景，包括如何开启设备的总调试开关，反编译利器apktool、Jadx、Xposed、CydiaSubstrate等。操作篇包括第20~26章，主要介绍Android中的逆向分析技巧，包括静态方式和动态方式，介",
+                    img_url: "https://ws2.sinaimg.cn/large/006tNc79ly1fmojaxsu2kj304605gq30.jpg",
+                    tags: "Android,安全,逆向",
+                    isshow: true,
+                    isShowCover: true,
+                    isad: false,
+                    ad_config: {
+                        category: "AD",
+                        action: "click",
+                        label: "",
+                        value: "",
+                        nodeid: "",
+                    },
+                    style: {
+                        isRound: true
+                    }
                 }
             ]
         };
