Add book and welfare nav links

--- a/donate.html
+++ b/donate.html
@@ -153,7 +153,9 @@
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#free-design-resources">Design Resources</a></li>
                                     </ul>
                                 </li>
-                                <li role="presentation" class="dropdown"><a id="donate" href="gay_friends.html">好基友</a></li>
+                                <li role="presentation" class="dropdown"><a href="index.html#books-list">书</a></li>
+                                <li role="presentation" class="dropdown"><a href="index.html#fuck-gfw-list">福利</a></li>
+                                <li role="presentation" class="dropdown"><a id="donate" href="gay_friends.html">好基友们</a></li>
                                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
                                 <li>
                                     <a href="https://github.com/inferjay/AndroidDevTools"  data-title="View GitHub Project" class="menu-github-icon"><img src="static/image/icon-github.png" alt="GitHub" /></a>
