--- a/gay_friends.html
+++ b/gay_friends.html
@@ -153,6 +153,8 @@
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#free-design-resources">Design Resources</a></li>
                                     </ul>
                                 </li>
+                                <li role="presentation" class="dropdown"><a href="index.html#books-list">书</a></li>
+                                <li role="presentation" class="dropdown"><a href="index.html#fuck-gfw-list">福利</a></li>
                                 <li role="presentation" class="dropdown"><a id="donate" href="donate.html">捐赠</a></li>
                                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
                                 <li role="presentation" class="dropdown">
