--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#free-design-resources">Design Resources</a></li>
                                     </ul>
                                 </li>
+                                <li role="presentation" class="dropdown"><a href="#books-list">书</a></li>
+                                <li role="presentation" class="dropdown"><a href="#fuck-gfw-list">福利</a></li>
                                 <li role="presentation" class="dropdown"><a id="gay_friends" href="gay_friends.html">好基友们</a></li>
                                 <li role="presentation" class="dropdown"><a id="donate" href="donate.html">捐赠</a></li>
                                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
@@ -4626,16 +4628,16 @@
                         <h2>开启新世界大门的🔑</h2>
                         <ul>
                             <li>
-                                <a href="https://www.vultr.com/?ref=706872" title="VultrVultr 注册即送 30 刀，节点多，最便宜 2.5 刀一个月" onclick="trackOutboundLink('https://www.vultr.com/?ref=706872', 'Host-vultr', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qbnm4j308g02saa8.jpg"></a>
+                                <a href="https://bwh1.net/aff.php?aff=133&amp;pid=56" title="注册即送 10 刀，更有直连中国的线路仅需 3.99 刀一个月，年付只需 29 刀，使用优惠码 BWH1ZBPVK 再节省 6%" onclick="trackOutboundLink('https://bwh1.net/aff.php?aff=133&amp;pid=56', 'Host-bandwagonhost', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qvivcj308g02st92.jpg"></a>
                             </li>
                             <li>
-                                <a href="https://www.linode.com/?r=9343985e91d6bd860b71f5284ea5c8f674f2775e" title="Linode注册即送 10 刀，节点多，最便宜 5 刀一个月" onclick="trackOutboundLink('https://www.linode.com/?r=9343985e91d6bd860b71f5284ea5c8f674f2775e', 'Host-linode', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qir5cj308g02swew.jpg"></a>
+                                <a href="https://www.vultr.com/?ref=706872" title="VultrVultr 注册即送 30 刀，节点多，最便宜 2.5 刀一个月" onclick="trackOutboundLink('https://www.vultr.com/?ref=706872', 'Host-vultr', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qbnm4j308g02saa8.jpg"></a>
                             </li>
                             <li>
                                 <a href="https://www.digitalocean.com/?refcode=ef15936ffa93" title="DigitalOcean注册即送 10 刀，节点多，最便宜 5 刀一个月" onclick="trackOutboundLink('https://www.digitalocean.com/?refcode=ef15936ffa93', 'Host-digitalocean', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qnb5ij308g02s0t1.jpg"></a>
                             </li>
                             <li>
-                                <a href="https://bwh1.net/aff.php?aff=133&amp;pid=56" title="注册即送 10 刀，更有直连中国的线路仅需 3.99 刀一个月，年付只需 29 刀，使用优惠码 BWH1ZBPVK 再节省 6%" onclick="trackOutboundLink('https://bwh1.net/aff.php?aff=133&amp;pid=56', 'Host-bandwagonhost', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qvivcj308g02st92.jpg"></a>
+                                <a href="https://www.linode.com/?r=9343985e91d6bd860b71f5284ea5c8f674f2775e" title="Linode注册即送 10 刀，节点多，最便宜 5 刀一个月" onclick="trackOutboundLink('https://www.linode.com/?r=9343985e91d6bd860b71f5284ea5c8f674f2775e', 'Host-linode', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qir5cj308g02swew.jpg"></a>
                             </li>
                         </ul>
                     </div>
