--- a/index.html
+++ b/index.html
@@ -5260,7 +5260,7 @@
                     }
                 },
                 {
-                    title: "Android应用安全防护和逆向分析",
+                    title: "Android 应用安全防护和逆向分析",
                     url: "https://amazon.cn/gp/product/B0788XV9WC/ref=as_li_tl?ie=UTF8&camp=536&creative=3200&creativeASIN=B0788XV9WC&linkCode=as2&tag=androiddevtools-bottom-book-",
                     description: "本书全面介绍Android应用的安全防护方法与逆向分析技术，分为四篇：基础篇、防护篇、工具篇、操作篇，共26章。基础篇包括第1~7章，主要介绍移动应用安全的基础知识，包括Android中NDK开发知识、逆向中需要用到的命令、编译之后的apk包含的四类主要文件格式解析等。防护篇包括第8~14章，主要介绍移动应用安全防护的相关技术，包括混淆、签名校验、反调试检测等安全策略，Android应用升级权限、降低权限等，配置文件中的问题，应用签名机制，apk的加固策略，so文件的加固策略等。工具篇包括第15~19章，主要介绍逆向分析常用的工具以及使用场景，包括如何开启设备的总调试开关，反编译利器apktool、Jadx、Xposed、CydiaSubstrate等。操作篇包括第20~26章，主要介绍Android中的逆向分析技巧，包括静态方式和动态方式，介",
                     img_url: "https://ws2.sinaimg.cn/large/006tNc79ly1fmojaxsu2kj304605gq30.jpg",
@@ -5285,6 +5285,26 @@
                     description: "全球已经有很多开发者使用 Android Things 开发出了非常有意思的应用，使用 Android Things 技术在物联网领域占得一席之地。这一次，我们希望中国的开发者也能参与，不掉队。我们与官方取得联系，在 Android Things 的文档最近进行的一次大改动之后，计划招募志愿者将文档中文化，并持续跟进。欢迎大家不停的 Review 这份翻译文档。在我们的社区校对完成之后，文档就是 Google Developers 中文官方文档。",
                     img_url: "https://ws2.sinaimg.cn/large/006tKfTcly1fmpjxtm14yj304605gwer.jpg",
                     tags: "Android,Android Things,物联网,IoT",
+                    isshow: true,
+                    isShowCover: true,
+                    isad: false,
+                    ad_config: {
+                        category: "AD",
+                        action: "click",
+                        label: "",
+                        value: "",
+                        nodeid: "",
+                    },
+                    style: {
+                        isRound: true
+                    }
+                },
+                {
+                    title: "JavaScript Promise 迷你书（中文版）",
+                    url: "http://liubin.org/promises-book/",
+                    description: "本书的目的是以目前还在制定中的 ECMAScript 6 Promises 规范为中心，着重向各位读者介绍 JavaScript 中对 Promise 相关技术的支持情况。通过阅读本书，我们希望各位读者能在下面三个目标上有所收获：1.学习 Promise 相关内容，能熟练使用 Promise 模式并进行测试；2.学习 Promise 适合什么、不适合什么，知道 Promise 不是万能的，不能什么都想用 Promise 来解决；3.以 ES6 Promises 为基础进行学习，逐渐发展形成自己的风格。像上面所提到的那样，本书主要是以 ES6 Promises，即 JavaScript 的标准规范为基础的、Promise 的相关知识为主要讲解内容。",
+                    img_url: "https://ws3.sinaimg.cn/large/006tKfTcly1fmpktm97s8j304605g3ys.jpg",
+                    tags: "JavaScript,Promise,ECMAScript 6",
                     isshow: true,
                     isShowCover: true,
                     isad: false,
