Add android studio 3.1 rc6 link

--- a/index.html
+++ b/index.html
@@ -329,6 +329,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.1 Canary 6 -->
+                            <tr>
+                                <td rowspan="5">3.1 Canary 6</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.5/android-studio-ide-173.4506631-windows.zip">android-studio-ide-173.4506631-windows.zip</a>
+                                </td>
+                                <td>934257645 bytes</td>
+                                <td>7780214adbce7520063f17892c1a8eb7f6ffa1ef85327b1f239357db2a324af2</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1fmswz3z18uj31hl0joq6x.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.5/android-studio-ide-173.4506631-windows32.zip">android-studio-ide-173.4506631-windows32.zip</a>
+                                </td>
+                                <td>933728868 bytes</td>
+                                <td>373e586c6fc24dabcf261f20bc6cb0d6c51f1dd0b64f55570c70d1a65d771b85</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.5/android-studio-ide-173.4506631-mac.zip">android-studio-ide-173.4506631-mac.dmg</a>
+                                </td>
+                                <td>933279334 bytes</td>
+                                <td>a5d54319ffb78c11e3653790c752deb9d570827e5063d76fd3a008d38cc354b7</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.5/android-studio-ide-173.4506631-linux.zip">android-studio-ide-173.4506631-linux.zip</a>
+                                </td>
+                                <td>932639587 bytes</td>
+                                <td>f60bae98d675f20dd93d6867ad8f9cbea04a87810c059ea8dfee9addf311dc83</td>
+                            </tr>
                             <!-- 3.1 Canary 5 -->
                             <tr>
                                 <td rowspan="5">3.1 Canary 5</td>
