Add OTCBTC Readpacket QRCode

--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
             </a>
         </div>
         <div class="ad-float-right">
+            <a href="https://otcbtc.com/referrals/INFERJAY" title="扫码注册，领比特币红包，OTCBTC 最流畅、最靠谱、最好用的场外交易平台。" onclick="trackOutboundLink('https://otcbtc.com/referrals/INFERJAY', 'AD-OTCBTC-Redpacket', 'click');" target="_blank">
+                <img src="https://ws1.sinaimg.cn/large/006tNc79ly1fmvgx80nrej303m05tmxv.jpg">
+            </a>
+        </div>
+        <div class="ad-float-right hide">
             <a href="#" title="支付宝扫码领红包，天天可领，想花就花" onclick="trackOutboundLink('Alipayhongbao.com', 'AD-AliPay-HB', 'click');" target="_blank">
                 <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fls1eov2jej303m0480ta.jpg">
             </a>
