--- a/index.html
+++ b/index.html
@@ -4888,7 +4888,7 @@
                         } else {
                             url += '&';
                         }
-                        url += "utm_source=androiddevtools.cn&utm_medium=website";
+                        url += "utm_source=androiddevtools&utm_medium=website";
                         $(this).attr('href', url);
                     }
                 }
