Added Android Studio 3.1 Preview7 links

--- a/index.html
+++ b/index.html
@@ -338,6 +338,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.1 Canary 7 -->
+                            <tr>
+                                <td rowspan="5">3.1 Canary 7</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.6/android-studio-ide-173.4524538-windows.zip">android-studio-ide-173.4524538-windows.zip</a>
+                                </td>
+                                <td>901303342 bytes</td>
+                                <td>3e954cd7b857b6eb6e48e52ef15616272cdb334a67eaeb9088ad92f275379fb7</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1fn9c7typ9ej30x10g3tbz.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.6/android-studio-ide-173.4524538-windows32.zip">android-studio-ide-173.4524538-windows32.zip</a>
+                                </td>
+                                <td>900774565 bytes</td>
+                                <td>6b0ff2adc9dbbc3929da0c3643277e7823324874ae308649eb1b7510f4b908f7</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.6/android-studio-ide-173.4524538-mac.zip">android-studio-ide-173.4524538-mac.dmg</a>
+                                </td>
+                                <td>900345002 bytes</td>
+                                <td>7c4e81310a35554e3f9e6aeed2c84f476580f88c1165c10d6586307d288ad754</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.6/android-studio-ide-173.4524538-linux.zip">android-studio-ide-173.4524538-linux.zip</a>
+                                </td>
+                                <td>899685278 bytes</td>
+                                <td>dc38298384e2a85590cfab179174ad3e8b206d062f819ca9b73f66c83cd74766</td>
+                            </tr>
                             <!-- 3.1 Canary 6 -->
                             <tr>
                                 <td rowspan="5">3.1 Canary 6</td>
