Added Android Studio 3.1 Preivew8 links

--- a/index.html
+++ b/index.html
@@ -338,6 +338,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.1 Canary 8 -->
+                            <tr>
+                                <td rowspan="5">3.1 Canary 8</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.7/android-studio-ide-173.4529993-windows.zip">android-studio-ide-173.4529993-windows.zip</a>
+                                </td>
+                                <td>901958906 bytes</td>
+                                <td>ff313a7ad84c75f311720e43e63cecd5c4965d6b5ba27ce88791ca3bdf6e6ce2</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1fn9c7typ9ej30x10g3tbz.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.7/android-studio-ide-173.4529993-windows32.zip">android-studio-ide-173.4529993-windows32.zip</a>
+                                </td>
+                                <td>901430129 bytes</td>
+                                <td>c020ca6b5cb8f7048971730f8c597abc68d46b0859d007c2dcfd01366808fd67</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.7/android-studio-ide-173.4529993-mac.zip">android-studio-ide-173.4529993-mac.dmg</a>
+                                </td>
+                                <td>901000526 bytes</td>
+                                <td>b8513b482fb6fd603b4359d34187a1e1f4f108db0fdf71dc5b165d9e9db67bcd</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.7/android-studio-ide-173.4529993-linux.zip">android-studio-ide-173.4529993-linux.zip</a>
+                                </td>
+                                <td>900340802 bytes</td>
+                                <td>a3b48c7c65f8872193ca38a939497192cb3b574cb90dd4317614b7bc7afbd355</td>
+                            </tr>
                             <!-- 3.1 Canary 7 -->
                             <tr>
                                 <td rowspan="5">3.1 Canary 7</td>
