added donate info

--- a/donate.html
+++ b/donate.html
@@ -19,19 +19,19 @@
     <link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
     <!-- GrowingIO 统计 -->
     <script type='text/javascript'>
-      var _vds = _vds || [];
-      window._vds = _vds;
-      (function(){
-        _vds.push(['setAccountId', '84ec9de1506d36be']);
+        var _vds = _vds || [];
+        window._vds = _vds;
         (function() {
-          var vds = document.createElement('script');
-          vds.type='text/javascript';
-          vds.async = true;
-          vds.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'dn-growing.qbox.me/vds.js';
-          var s = document.getElementsByTagName('script')[0];
-          s.parentNode.insertBefore(vds, s);
+            _vds.push(['setAccountId', '84ec9de1506d36be']);
+            (function() {
+                var vds = document.createElement('script');
+                vds.type = 'text/javascript';
+                vds.async = true;
+                vds.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'dn-growing.qbox.me/vds.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(vds, s);
+            })();
         })();
-      })();
     </script>
     <!-- GrowingIO End -->
 </head>
@@ -158,7 +158,7 @@
                                 <li role="presentation" class="dropdown"><a id="donate" href="gay_friends.html">好基友们</a></li>
                                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
                                 <li>
-                                    <a href="https://github.com/inferjay/AndroidDevTools"  data-title="View GitHub Project" class="menu-github-icon"><img src="static/image/icon-github.png" alt="GitHub" /></a>
+                                    <a href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project" class="menu-github-icon"><img src="static/image/icon-github.png" alt="GitHub" /></a>
                                 </li>
                             </ul>
                         </ul>
@@ -177,21 +177,21 @@
                     </p>
                     <br/>
                     <blockquote style="color: gray">
-                    <strong style="color: red">注意:</strong>微信现在看不到转账人的昵称了,请通过微信支付进行捐赠的小伙伴在本页面底部的评论区留下你的昵称和捐赠金额，否则在捐赠列表里就只能显示捐赠金额！
+                        <strong style="color: red">注意:</strong>微信现在看不到转账人的昵称了,请通过微信支付进行捐赠的小伙伴在本页面底部的评论区留下你的昵称和捐赠金额，否则在捐赠列表里就只能显示捐赠金额！
                     </blockquote>
                 </div>
                 <div class="donate-method-qr">
-                     <h4 class="donate-method-title">支付宝</h4>
-                     <img class="donate-method-qr-img" src="./static/image/alipay_qr_code.png" />
-                 </div>
-                 <div class="donate-method-qr">
-                     <h4 id="wechat" class="donate-method-title">微信</h4>
-                     <img class="donate-method-qr-img" src="./static/image/weichat_pay_qr_code.png" />
-                 </div>
-                 <div class="donate-method-qr">
-                     <h4 id="wechat" class="donate-method-title">比特币</h4>
-                     <img class="donate-method-qr-img" src="./static/image/bitcoin_pay_qr_code.png" />
-                 </div>
+                    <h4 class="donate-method-title">支付宝</h4>
+                    <img class="donate-method-qr-img" src="./static/image/alipay_qr_code.png" />
+                </div>
+                <div class="donate-method-qr">
+                    <h4 id="wechat" class="donate-method-title">微信</h4>
+                    <img class="donate-method-qr-img" src="./static/image/weichat_pay_qr_code.png" />
+                </div>
+                <div class="donate-method-qr">
+                    <h4 id="wechat" class="donate-method-title">比特币</h4>
+                    <img class="donate-method-qr-img" src="./static/image/bitcoin_pay_qr_code.png" />
+                </div>
             </div>
             <!-- 捐赠列表 -->
             <div class="row">
@@ -1183,7 +1183,7 @@
                                 <td>¥1.5</td>
                             </tr>
                             <tr>
-                            	<td>不轻易说出口</td>
+                                <td>不轻易说出口</td>
                                 <td>¥5</td>
                                 <td>DQDQ</td>
                                 <td>¥1</td>
@@ -1193,7 +1193,7 @@
                                 <td>¥5</td>
                             </tr>
                             <tr>
-                            	<td>洋</td>
+                                <td>洋</td>
                                 <td>¥6.66</td>
                                 <td>Eman</td>
                                 <td>¥10.24</td>
@@ -1452,7 +1452,7 @@
                                 <td>珊珊的点滴</td>
                                 <td>¥10</td>
                             </tr>
-                             <tr>
+                            <tr>
                                 <td>小七</td>
                                 <td>¥6.66</td>
                                 <td>彐亻</td>
@@ -1679,7 +1679,7 @@
                                 <td>¥6.66</td>
                                 <td>*智伟</td>
                                 <td>¥10.24</td>
-                                <td></td>
+                                <td><a href="http://www.visualzhang.com/">visualzhang</a></td>
                                 <td></td>
                             </tr>
                         </tbody>
@@ -1687,7 +1687,7 @@
                 </div>
             </div>
         </div>
-        <div  class="container body-container margin-top-16">
+        <div class="container body-container margin-top-16">
             <!-- 评论框 -->
             <div class="row">
                 <div id="comments">
@@ -1715,13 +1715,13 @@
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
     <script>
         var gitment = new Gitment({
-          id: 'DonatePageComments', // 可选。默认为 location.href
-          owner: 'inferjay',
-          repo: 'AndroidDevTools',
-          oauth: {
-            client_id: 'd2125d4a0d86391b925e',
-            client_secret: '70fb5a42e94b8d3d94c3a6d009eb60fabdc203da',
-          },
+            id: 'DonatePageComments', // 可选。默认为 location.href
+            owner: 'inferjay',
+            repo: 'AndroidDevTools',
+            oauth: {
+                client_id: 'd2125d4a0d86391b925e',
+                client_secret: '70fb5a42e94b8d3d94c3a6d009eb60fabdc203da',
+            },
         })
         gitment.render('comments-container')
     </script>
@@ -1732,39 +1732,46 @@
     <script src="static/js/jquery-maven-artifact.min.js"></script>
     <script src="static/js/jquery.toTop.min.js"></script>
     <script>
-    $(function() {
-        $('.zh-backtotop').toTop();
-    });
+        $(function() {
+            $('.zh-backtotop').toTop();
+        });
     </script>
     <script type="text/javascript">
-    $(function() {
-        // Syntax highlight code blocks.
-        //prettyPrint();
+        $(function() {
+            // Syntax highlight code blocks.
+            //prettyPrint();
 
-        // Spy on scroll position for real-time updating of current section.
-        $('body').scrollspy();
+            // Spy on scroll position for real-time updating of current section.
+            $('body').scrollspy();
 
-        // Use smooth-scroll for internal links.
-        $('a').smoothScroll();
+            // Use smooth-scroll for internal links.
+            $('a').smoothScroll();
 
-        // Enable tooltips on the header nav image items.
-        $('.menu').tooltip({
-            placement: 'bottom',
-            trigger: 'hover',
-            container: 'body',
-            delay: {
-                show: 500,
-                hide: 0
-            }
+            // Enable tooltips on the header nav image items.
+            $('.menu').tooltip({
+                placement: 'bottom',
+                trigger: 'hover',
+                container: 'body',
+                delay: {
+                    show: 500,
+                    hide: 0
+                }
+            });
         });
-    });
     </script>
     <!-- Google Analytics -->
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-52369435-2', 'auto');
         ga('send', 'pageview');
@@ -1775,7 +1782,7 @@
         //bind a click
         $(document).bind('DOMNodeInserted', function(event) {
             $('a[href^="http"]').each(
-                function(){
+                function() {
                     if (!$(this).attr('target')) {
                         $(this).attr('target', '_blank')
                     }
