add donate info

--- a/donate.html
+++ b/donate.html
@@ -1680,6 +1680,16 @@
                                 <td>*智伟</td>
                                 <td>¥10.24</td>
                                 <td><a href="http://www.visualzhang.com/">visualzhang</a></td>
+                                <td>¥5</td>
+                            </tr>
+                            <tr>
+                                <td>*堃</td>
+                                <td>¥5</td>
+                                <td>剑魄琴心</td>
+                                <td>¥8</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                             </tr>
                         </tbody>
